--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,8 @@
     <div class="form-row">
       <div class="form-group col-md-4">
         <div class="card text-white bg-dark" style="width: 18rem;">
-          <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5668/angry-developer.jpg" class="card-img-top engineer-img" alt="..." style="height: 14rem;">
+          <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5668/angry-developer.jpg"
+            class="card-img-top engineer-img" alt="..." style="height: 14rem;">
           <div class="card-body row">
             <div class="col-md-4 d-flex justify-content-center">
               <input class="form-check-input" type="radio" id="engineer" name="job" value="engineer">
@@ -18,7 +19,8 @@
       </div>
       <div class="form-group col-md-4">
         <div class="card text-white bg-dark" style="width: 18rem;">
-          <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5667/angry-designer.jpg" class="card-img-top engineer-img" alt="..." style="height: 14rem">
+          <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5667/angry-designer.jpg"
+            class="card-img-top engineer-img" alt="..." style="height: 14rem">
           <div class="card-body row">
             <div class="col-md-4 d-flex justify-content-center">
               <input class="form-check-input" type="radio" id="designer" name="job" value="designer">
@@ -33,7 +35,8 @@
       </div>
       <div class="form-group col-md-4">
         <div class="card text-white bg-dark" style="width: 18rem;">
-          <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5669/angry-founder.jpg" class="card-img-top engineer-img" alt="..." style="height: 14rem">
+          <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5669/angry-founder.jpg"
+            class="card-img-top engineer-img" alt="..." style="height: 14rem">
           <div class="card-body row">
             <div class="col-md-4 d-flex justify-content-center">
               <input class="form-check-input" type="radio" id="entrepreneur" name="job" value="entrepreneur">
@@ -47,12 +50,14 @@
         </div>
       </div>
     </div>
+    <div class="row d-flex justify-content-around">
+      <button type="submit" class="btn btn-dark" style="height: 3rem;">產生幹話</button>
       {{#if shitTalk}}
-        <div class="alert alert-info" role="alert">
-          {{shitTalk}}
-        </div>
+      <div class="alert alert-info col-md-8" role="alert">
+        {{shitTalk}}
+      </div>
       {{/if}}
-    <button type="submit" class="btn btn-dark">產生幹話</button>
+    </div>
   </form>
 </div>
 
